# gunmetal

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  README.md  package.json
.github/workflows/: ci.yml  release.yml
00/7cdf4ca8a6/: metadata.json
00/7cdf4ca8a6/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
11/5568d1e853/: metadata.json
11/5568d1e853/0/: full.jsonl  metadata.json  prompt.txt
32/0ceacc10d5/: metadata.json
32/0ceacc10d5/0/: content_hash.txt  metadata.json  prompt.txt
4e/0e88e1e9d0/: metadata.json
4e/0e88e1e9d0/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
50/b716050985/: metadata.json
50/b716050985/0/: metadata.json  prompt.txt
50/b716050985/1/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
50/b716050985/10/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
50/b716050985/2/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
50/b716050985/3/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
50/b716050985/4/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
50/b716050985/5/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
50/b716050985/6/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
50/b716050985/7/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
50/b716050985/8/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
50/b716050985/9/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
56/28d576bc45/: metadata.json
56/28d576bc45/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
5a/e8062a81b8/: metadata.json
5a/e8062a81b8/0/: content_hash.txt  metadata.json  prompt.txt
5f/246f022148/: metadata.json
5f/246f022148/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
76/e2c1cc3907/: metadata.json
76/e2c1cc3907/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
76/e2c1cc3907/1/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
80/7e6f36aa89/: metadata.json
80/7e6f36aa89/0/: content_hash.txt  metadata.json
91/ea60fe71d4/: metadata.json
91/ea60fe71d4/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
91/ea60fe71d4/1/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
91/ea60fe71d4/2/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
91/ea60fe71d4/3/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
91/ea60fe71d4/4/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
91/ea60fe71d4/5/: content_hash.txt  metadata.json
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/gunmetal/: Cargo.toml
apps/gunmetal/src/: main.rs
apps/site/: package.json
apps/site/src/app/: layout.tsx
apps/site/src/app/changelog/: page.tsx
apps/site/src/components/: site-shell.tsx
apps/site/src/lib/: site-content.ts
apps/web/: DESIGN.md  README.md  next.config.ts  package.json
apps/web/src/app/: globals.css  layout.tsx  page.test.tsx  page.tsx
apps/web/src/app/api/perf-chat/: route.ts
apps/web/src/app/changelog/: page.tsx
apps/web/src/app/changelogs/: page.tsx  releases.ts
apps/web/src/app/developer/sdk/: page.tsx
apps/web/src/app/docs/: page.tsx
apps/web/src/app/download/: page.tsx
apps/web/src/app/install/: page.tsx
apps/web/src/app/perf-lab/: page.tsx  perf-lab-client.tsx  shared.test.ts  shared.ts
apps/web/src/app/products/suite/: page.tsx
apps/web/src/app/start-here/: page.tsx
apps/web/src/app/web-ui/: page.tsx
apps/web/src/app/webui/: page.tsx
apps/web/src/components/: index.ts  site-shell.tsx
apps/web/src/components/layout/: Footer.tsx  Navbar.tsx
apps/web/src/components/providers/: ThemeProvider.tsx
apps/web/src/components/sections/: Bento.tsx  CoreValue.tsx  Features.tsx  Hero.tsx  HowItWorks.tsx  Installation.tsx  Providers.tsx
apps/web/src/components/ui/: Aurora.tsx  Badge.tsx  BlurText.tsx  Button.tsx  Card.tsx  CodeBlock.tsx  Dropdown.tsx  FilmGrain.tsx  MarketingPrimitives.tsx  PackageManagerCommandBox.tsx  Particles.tsx  SplitText.tsx  SpotlightCard.tsx
apps/web/src/hooks/: use-scroll-reveal.ts
apps/web/src/lib/: design-tokens.ts  site-content.ts
b4/1173e448a2/: metadata.json
b4/1173e448a2/0/: metadata.json
c4/f21b09f427/: metadata.json
c4/f21b09f427/0/: metadata.json
c4/f21b09f427/1/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
c4/f21b09f427/2/: metadata.json
crates/gunmetal-app/: Cargo.toml
crates/gunmetal-app/src/: main.rs
crates/gunmetal-cli/: Cargo.toml
crates/gunmetal-cli/src/: lib.rs
crates/gunmetal-core/src/: lib.rs
crates/gunmetal-daemon/: Cargo.toml
crates/gunmetal-daemon/src/: lib.rs
crates/gunmetal-providers/: Cargo.toml
crates/gunmetal-providers/src/: codex.rs  lib.rs  openai.rs  zen.rs
crates/gunmetal-storage/: Cargo.toml
crates/gunmetal-storage/src/: lib.rs
crates/gunmetal-tui/: Cargo.toml
crates/gunmetal-tui/src/: lib.rs
d4/b795e04352/: metadata.json
d4/b795e04352/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
d8/5c49ae0bd8/: metadata.json
d8/5c49ae0bd8/0/: content_hash.txt  metadata.json  prompt.txt
d9/9d6fcd76f5/: metadata.json
d9/9d6fcd76f5/0/: content_hash.txt  metadata.json  prompt.txt
docs/: documentation.md  implement.md  plans.md  prompt.md
e8/700e4136b9/: metadata.json
e8/700e4136b9/0/: metadata.json
e8/700e4136b9/1/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
e8/700e4136b9/2/: metadata.json
scripts/: bench-local-overhead.mjs  bench-zen-overhead.mjs  release-tag.mjs  smoke-install.mjs
test/: release-tag.test.js  repo-structure.test.js
