[workspace]
members = [
  "apps/cli",
  "packages/cli",
  "packages/core",
  "packages/daemon",
  "packages/providers",
  "packages/storage",
  "packages/tui"
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/Dhruv2mars/gunmetal"
version = "0.1.5"

[workspace.dependencies]
arboard = "3.6.1"
async-trait = "0.1.89"
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["macros"] }
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.48", features = ["derive"] }
crossterm = "0.29.0"
dirs = "6.0.0"
futures-util = "0.3.31"
libc = "0.2.177"
ratatui = "0.29.0"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls", "stream"] }
rusqlite = { version = "0.37.0", features = ["bundled", "chrono"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tempfile = "3.23.0"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1.17"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
webbrowser = "1.0.6"
