[workspace]
members = [
  "apps/gunmetal",
  "packages/app-cli",
  "packages/app-daemon",
  "packages/app-storage",
  "packages/extensions",
  "packages/sdk",
  "packages/sdk-core"
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/Dhruv2mars/gunmetal"
version = "0.1.8"

[workspace.dependencies]
async-stream = "0.3.6"
async-trait = "0.1.89"
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["macros"] }
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.48", features = ["derive"] }
dirs = "6.0.0"
futures-util = "0.3.31"
libc = "0.2.177"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls", "stream"] }
rusqlite = { version = "0.37.0", features = ["bundled", "chrono"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tempfile = "3.23.0"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
webbrowser = "1.0.6"
