[package]
name = "gunmetal"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[[bin]]
name = "gunmetal"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
gunmetal-cli = { path = "../../packages/cli" }
gunmetal-storage = { path = "../../packages/storage" }
gunmetal-tui = { path = "../../packages/tui" }
tokio.workspace = true
