[package]
name = "gunmetal-app"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[[bin]]
name = "gunmetal"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
gunmetal-cli = { path = "../gunmetal-cli" }
gunmetal-storage = { path = "../gunmetal-storage" }
gunmetal-tui = { path = "../gunmetal-tui" }
tokio.workspace = true
