[package]
name = "gunmetal-daemon"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
gunmetal-core = { path = "../gunmetal-core" }
gunmetal-providers = { path = "../gunmetal-providers" }
gunmetal-storage = { path = "../gunmetal-storage" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
tower.workspace = true
