[package]
name = "gunmetal-providers"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
gunmetal-core = { path = "../gunmetal-core" }
gunmetal-storage = { path = "../gunmetal-storage" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
chrono.workspace = true
tempfile.workspace = true
