[package]
name = "gunmetal-providers"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
futures-util.workspace = true
gunmetal-core = { path = "../gunmetal-core" }
gunmetal-storage = { path = "../gunmetal-storage" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
url = "2.5.7"
uuid.workspace = true
webbrowser.workspace = true

[dev-dependencies]
chrono.workspace = true
tempfile.workspace = true
wiremock = "0.6.5"
